fix: change letter spacing in header

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -456,7 +456,7 @@ p > img {
   // font-family: $helveticaNeue;
   font-weight: 300;
   font-size: 28px;
-  letter-spacing: 1px;
+  letter-spacing: 0.5px;
   text-align: left;
 
   @include mobile {
@@ -492,7 +492,7 @@ nav {
     // color: $darkGray;
     text-align: right;
     font-weight: 300;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
 
     @include mobile {
       margin: 0 10px;
